minor(docs): changed router pathing in docs
