# food_db/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /v1
 definitions:
   auth.LoginParam:
     properties:
@@ -36,14 +35,13 @@ definitions:
         example: f3d1b8cd4f29e6a173c0dd9d84b3af2d2e19a74ccf8b0e57a3c4d90e8f12b7ac
         type: string
     type: object
-host: 127.0.0.1:8000
 info:
   contact: {}
   description: API for Macro_vision
   title: Macro_vision backend
   version: "1.0"
 paths:
-  /login:
+  /auth/login:
     post:
       consumes:
       - application/json
@@ -77,8 +75,8 @@ paths:
             type: string
       summary: login
       tags:
-      - auth
-  /signup:
+      - /auth
+  /auth/signup:
     post:
       consumes:
       - application/json
@@ -110,5 +108,5 @@ paths:
             type: string
       summary: signup
       tags:
-      - auth
+      - /auth
 swagger: "2.0"
