# food_db/handlers/auth.go
@@ -20,11 +20,11 @@ func AuthRouter(e *echo.Group) error {
 //
 //	@Summary		login
 //	@Description	Verify user’s login credentials (username and password), then generate a session and return the session token back to user
-//	@Tags			auth
+//	@Tags			/auth
 //	@Accept			json
 //	@Produce		json
 //	@Param			Request	body	auth_service.LoginParam	true	"login parameters"
-//	@Router			/login [post]
+//	@Router			/auth/login [post]
 //	@Success		200	{object}	auth_service.LoginResponse	"Ok"
 //	@Failure		404	{string}	string						"User not found in db"
 //	@Failure		409	{string}	string						"Invalid Credentials"
@@ -55,11 +55,11 @@ func login(c echo.Context) (err error) {
 //
 //	@Summary		signup
 //	@Description	Receive the sign up information, validate username (check if it exists), password (has to be lower than 71 byte for bcrypt hashing), and email (correct format). Then generate the session and return the token to the user (auto login)
-//	@Tags			auth
+//	@Tags			/auth
 //	@Accept			json
 //	@Produce		json
 //	@Param			Request	body	auth_service.SignupParam	true	"signup parameters"
-//	@Router			/signup [post]
+//	@Router			/auth/signup [post]
 //	@Success		201	{object}	auth_service.SignupResponse	"Account Created"
 //	@Failure		409	{string}	string						"Password too long (over 71 bytes)"
 //	@Failure		500	{string}	string						"Server Error"
